--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "webp",
   "version": "1.0.0",
-  "description": "",
+  "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack",
     "start": "webpack serve --open"
   },
@@ -18,6 +18,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.3",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
@@ -29,5 +30,14 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "style-loader": "^3.3.1"
-  }
+  },
+  "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kayonga99/ToDo-List.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Kayonga99/ToDo-List/issues"
+  },
+  "homepage": "https://github.com/Kayonga99/ToDo-List#readme"
 }
