--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
@@ -28,6 +29,7 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "jest-environment-jsdom": "^28.1.3",
     "lodash": "^4.17.21",
     "style-loader": "^3.3.1"
   },
